fixed auth screen on mobile

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,6 +13,9 @@
 body {
     margin: 0;
     padding-right: 15px;
+    @include for-tablet-portrait-up () {
+        padding-right: 0;
+    }
     &.modal-open {
         height: 100vh;
         overflow-y: hidden;
